--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "ng2-page-transition": "^1.1.0",
+    "ng2-smooth-scroll": "^1.0.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "@angular/cli": "1.0.3",
